--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -20,6 +20,19 @@
         </div>
     </div>
     <div class="rascalcontent">
+<div class=page>
+  <h1>Login Demo</h1>
+  <div class=metanav>
+  {% if current_user.is_authenticated() %}
+    Welcome, {{ current_user.name }} | <a href="/logout">log out</a>
+  {% else %}
+    You are not logged in | <a href="/login">log in</a>
+  {% endif %}
+  </div>
+  {% for message in get_flashed_messages() %}
+    <div class=flash>{{ message }}</div>
+  {% endfor %}
+</div>
     This is the config page.
     </div>
 </body>
