--- a/editor/templates/index.html
+++ b/editor/templates/index.html
@@ -1,12 +1,24 @@
-{% extends "layout.html" %}
+<!doctype html>
+<title>Login Demo</title>
+<link rel="stylesheet" type="text/css" href="/editor/static/style.css">
 
-{% block body %}
+<div class=page>
+  <div class=metanav>
+  {% if current_user.is_authenticated() %}
+    Welcome, {{ current_user.name }} | <a href="/logout">log out</a>
+  {% else %}
+    You are not logged in | <a href="/login">log in</a>
+  {% endif %}
+  </div>
+  {% for message in get_flashed_messages() %}
+    <div class=flash>{{ message }}</div>
+  {% endfor %}
 <h2>Welcome</h2>
 
 {% if current_user.is_authenticated() %}
-<p>You are authorized to access <a href="{{ url_for('secret') }}">the secret information</a>.
+<p>You are authorized to access the secret information.
 {% else %}
 <p>This Web site contains secret information available only to authorized users.
 Available usernames are Notch, Steve, and Creeper.
 {% endif %}
-{% endblock body %}
+</div>
