--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -17,6 +17,13 @@
                 <li><a href="/config">config</a> | </li>
                 <li><a href="/monitor">monitor</a></li>
             </ul>
+            <div class=metanav>
+            {% if current_user.is_authenticated() %}
+              Welcome, {{ current_user.name }} | <a href="/logout">log out</a>
+            {% else %}
+              You are not logged in | <a href="/login">log in</a>
+            {% endif %}
+            </div>
         </div>
     </div>
     <div class="rascalcontent">
