--- a/public/templates/arduino.html
+++ b/public/templates/arduino.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="rascalcontent">
+{% if current_user.is_authenticated() %}
+    <a href="/edit" style="position: absolute; top:0; right:0; background:#414243;">| editor |</a>
+{% endif %}
         <h1>Arduino demo</h1>
         <form method="POST" action="/send_serial">
             <input type="text">
