--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Rascal demo</title>
+    <title>Monitor</title>
     <link rel="shortcut icon" href="/editor/static/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
