--- a/public/templates/arduino.html
+++ b/public/templates/arduino.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Rascal demo</title>
+    <title>Arduino demo</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico"> 
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <script src="http://code.jquery.com/jquery-1.5.js"></script>
 </head>
 <body>
