--- a/public/templates/lcd.html
+++ b/public/templates/lcd.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Rascal demo</title>
+    <title>LCD demo</title>
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="{{ url_for('static', filename='jquery-1.5.js') }}"></script>
 </head>
 <body>
