--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Rascal demo</title>
+    <title>Relay demo</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico"> 
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <script src="/static/jquery-1.5.js"></script>
     <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="/static/jquery.jqplot.js"></script>
