Split editor app into two pieces so we can run uWSGI in emperor mode

--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -13,9 +13,9 @@
         <div class="rascalcontent">
             <a href="/edit"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
-                <li><a href="/log">log</a> | </li>
-                <li><a href="/config">config</a> | </li>
-                <li><a href="/monitor">monitor</a></li>
+                <li><a href="/editor/log">log</a> | </li>
+                <li><a href="/editor/config">config</a> | </li>
+                <li><a href="/editor/monitor">monitor</a></li>
             </ul>
             <div class=metanav>
             {% if current_user.is_authenticated() %}
