Clean up logout links

--- a/editor/templates/log.html
+++ b/editor/templates/log.html
@@ -18,11 +18,7 @@
                 <li><a href="/editor/monitor">monitor</a></li>
             </ul>
             <div class=metanav>
-            {% if current_user.is_authenticated() %}
-              Welcome, {{ current_user.name }} | <a href="/editor/logout">log out</a>
-            {% else %}
-              You are not logged in | <a href="/editor/login">log in</a>
-            {% endif %}
+                <a href="/editor/logout">log out</a>
             </div>
         </div>
     </div>
