--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -11,18 +11,14 @@
 <body>
     <div id="topbar">
         <div class="rascalcontent">
-            <a href="/edit"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
+            <a href="/editor/"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
                 <li><a href="/editor/log">log</a> | </li>
                 <li><a href="/editor/config">config</a> | </li>
                 <li><a href="/editor/monitor">monitor</a></li>
             </ul>
             <div class=metanav>
-            {% if current_user.is_authenticated() %}
-              Welcome, {{ current_user.name }} | <a href="/editor/logout">log out</a>
-            {% else %}
-              You are not logged in | <a href="/editor/login">log in</a>
-            {% endif %}
+                <a href="/editor/logout">log out</a>
             </div>
         </div>
     </div>
