--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -152,7 +152,7 @@
         $( "#overlay" ).css("visibility", "hidden");
     });
 
-    $('li').live('mouseenter mouseleave', function(event) {
+    $('li.file').live('mouseenter mouseleave', function(event) {
         if(event.type == 'mouseenter') {
             $(this).children('img').css('visibility', 'visible');
             $(this).children('img').click(function() {
